# git-email-pr

./: Cargo.toml  README.md
src/: email.rs  lib.rs  main.rs  redacted_string.rs
