[package]
name = "git-email-pr"
version = "0.1.0"
authors = ["Ellen Marie Dash <me@duckie.co>"]
readme = "README.md"
repository = "https://github.com/duckinator/git-email-pr"
license = "MIT"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10"
